--- a/2023/03/강사님 파일/numpy/ch06_04_데이터의_수집.ipynb
+++ b/2023/03/강사님 파일/numpy/ch06_04_데이터의_수집.ipynb
@@ -22,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/JoySoon/Python_Study/blob/main/2023/%EC%88%98%EC%97%85%ED%95%84%EA%B8%B0/numpy/ch06_04_%EB%8D%B0%EC%9D%B4%ED%84%B0%EC%9D%98_%EC%88%98%EC%A7%91.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/JoySoon/Python_Study/blob/main/2023/03/%EA%B0%95%EC%82%AC%EB%8B%98%20%ED%8C%8C%EC%9D%BC/numpy/ch06_04_%EB%8D%B0%EC%9D%B4%ED%84%B0%EC%9D%98_%EC%88%98%EC%A7%91.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
