--- a/2023/03/강사님 파일/DL/ch09_DL_10_RNN_qus0in.ipynb
+++ b/2023/03/강사님 파일/DL/ch09_DL_10_RNN_qus0in.ipynb
@@ -4,6 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "authorship_tag": "ABX9TyOB7uVH0PslrGnDD5Ox9XzF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49640,7 +49641,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/JoySoon/Python_Study/blob/main/2023/03/%EA%B0%95%EC%82%AC%EB%8B%98%20%ED%8C%8C%EC%9D%BC/DL/ch09_DL_10_RNN_qus0in.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/qus0in/DeepLearning/blob/main/qus0in/ch09_DL_10_RNN_qus0in.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
